--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.26.0",
+    "express": "^4.17.3",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2"
