--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   "dependencies": {
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "axios": "^0.26.0",
+    "country-state-city": "^3.0.1",
+    "react-phone-number-input": "^3.1.46",
+    "formik": "^2.2.9",
+    "yup": "^0.32.11"
   }
 }
