--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.26.0",
     "express": "^4.17.3",
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "axios": "^0.26.0",
+    "formik": "^2.2.9",
+    "yup": "^0.32.11"
   }
 }
