--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.26.0",
-    "express": "^4.17.3",
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "axios": "^0.26.0",
+    "country-state-city": "^3.0.1",
+    "react-phone-number-input": "^3.1.46",
+    "formik": "^2.2.9",
+    "yup": "^0.32.11"
   }
 }
