--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
     "express": "^4.17.3",
     "formik": "^2.2.9",
     "next": "latest",
-    "nodemailer": "^6.7.3",
+    "node-mailjet": "^3.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-phone-number-input": "^3.1.49",
     "yup": "^0.32.11"
   },
-  "devDependencies": {
-    "@types/nodemailer": "^6.4.4"
-  }
+  "devDependencies": {}
 }
