--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "express": "^4.17.3",
     "formik": "^2.2.9",
     "next": "latest",
+    "next-connect": "^0.12.2",
     "node-mailjet": "^3.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-phone-number-input": "^3.1.49",
+    "serverless-mysql": "^1.5.4",
     "yup": "^0.32.11"
-  },
-  "devDependencies": {}
+  }
 }
